# com.github.vsergeev-lua-periphery

./: .build  CMakeLists.txt  Jenkinsfile  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml
.github/workflows/: main.yml
jonchki/: jonchkicfg.xml
lua-periphery/: CMakeLists.txt  __README__.txt
lua-periphery/copy/: CMakeLists.txt
lua-periphery/installer/lua5.1/: install_linux.lua  lua-periphery.xml
lua-periphery/installer/lua5.2/: lua-periphery.xml
lua-periphery/installer/lua5.3/: lua-periphery.xml
lua-periphery/installer/lua5.4/: lua-periphery.xml
lua-periphery/patches/: 001_adapt_c_periphery_includes_to_installation.diff  001_add_lua5.4_compatibility.diff
